--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,25 @@
     <string name="termEndDateTextView_text">End Date:</string>
     <string name="term_inserted">Term inserted.</string>
     <string name="course_list_button_text">Course List</string>
+    <string name="courseTitleTextView_text">Title:</string>
+    <string name="enter_a_new_course_title">Enter a new title</string>
+    <string name="courseStartDateTextView_text">Start Date:</string>
+    <string name="courseEndDateTextView_text">End Date:</string>
+    <string name="assessment_list_button_text">Assessment List</string>
+    <string name="courseStatusTextView_Text">Status:</string>
+    <string name="new_course">New Course</string>
+    <string name="edit_course">Edit Course</string>
+    <string name="parent_id">parent_id</string>
+    <string name="course_deleted">Course deleted.</string>
+    <string name="course_updated">Course updated.</string>
+    <string name="course_inserted">Course inserted.</string>
+    <string name="start_date_hint">Enter a start date</string>
+    <string name="end_date_hint">Enter an end date</string>
+    <string-array name="course_status">
+        <item>Not Started</item>
+        <item>In Progress</item>
+        <item>Completed</item>
+        <item>Dropped</item>
+        <item>Failed</item>
+    </string-array>
 </resources>
