--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="mentor_deleted">Mentor deleted.</string>
     <string name="mentor_updated">Mentor updated.</string>
     <string name="mentor_inserted">Mentor inserted.</string>
+    <string name="term_list_button_text">Term List</string>
     <string-array name="course_status">
         <item>Not Started</item>
         <item>In Progress</item>
