--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
     <string name="term_list_button_text">Term List</string>
     <string name="dummy_text">Dummy Text</string>
     <string name="welcome_to_the_wgu_student_application">Welcome to the WGU student application.</string>
+    <string name="no_assessments_due">No assessment goals today.</string>
     <string-array name="course_status">
         <item>Not Started</item>
         <item>In Progress</item>
