--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,8 +62,14 @@
     <string name="mentor_inserted">Mentor inserted.</string>
     <string name="term_list_button_text">Term List</string>
     <string name="dummy_text">Dummy Text</string>
-    <string name="welcome_to_the_wgu_student_application">Welcome to the WGU student application.</string>
-    <string name="no_assessments_due">No assessment goals today.</string>
+    <string name="welcome_to_the_wgu_student_portal">Welcome to the WGU student portal.</string>
+    <string name="no_assessments_due">No assessments due.</string>
+    <string name="configure_to_do">Configure To Do List</string>
+    <string name="dialog_ok">OK</string>
+    <string name="dialog_cancel">Cancel</string>
+    <string name="to_do_window_id">to_do_window_id</string>
+    <string name="one_assessment_due">1 assessment due.</string>
+    <string name="multiple_assessments_due">" assessments due."</string>
     <string-array name="course_status">
         <item>Not Started</item>
         <item>In Progress</item>
@@ -71,4 +77,14 @@
         <item>Dropped</item>
         <item>Failed</item>
     </string-array>
+    <string-array name="to_do_window">
+        <item>Today</item>
+        <item>3 Days</item>
+        <item>1 Week</item>
+        <item>1 Month</item>
+    </string-array>
+    <plurals name="numberOfAssessmentsDue">
+        <item quantity="one">%d assessment due.</item>
+        <item quantity="other">%d assessments due.</item>
+    </plurals>
 </resources>
