--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,8 @@
     <string name="to_do_window_id">to_do_window_id</string>
     <string name="one_assessment_due">1 assessment due.</string>
     <string name="multiple_assessments_due">" assessments due."</string>
+    <string name="courseNoteTextView_Text">Notes:</string>
+    <string name="assessmentNoteTextView_Text">Notes:</string>
     <string-array name="course_status">
         <item>Not Started</item>
         <item>In Progress</item>
