Added sharing capability to the Course detail.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,7 @@
     <string name="courseNoteTextView_Text">Notes:</string>
     <string name="assessmentNoteTextView_Text">Notes:</string>
     <string name="open_the_camera">Open the Camera</string>
+    <string name="share">Share</string>
     <string-array name="course_status">
         <item>Not Started</item>
         <item>In Progress</item>
